# MSc_Thesis_Environmental-Pollution-Detection-Deep-Learning

./: .gitignore  QUICK_README.md  README.md  apply_standard_scaler_global.py  create_averaged_plots_from_json.py  data_preparation.py  inference_with_training.py  normalize_chips.py  pyproject.toml  run_training_multiple_seeds.py  train_chip_temperature_autoencoder.py  train_chip_to_baseline_autoencoder.py
data/fts_mzi_dataset/: match_peak_normalization_statistics.json  match_temp_normalization_statistics.json  minmax_normalization_statistics.json  normalization_statistics.json  peak_to_peak_normalization_statistics.json  robust_normalization_statistics.json  train_peak_normalization_statistics.json  train_temp_normalization_statistics.json
hyperparameter_search_results/ae_p10_es30_clf_p5_es15_bs256/: averaged_metrics_across_seeds.json  calculate_average_metrics.py
hyperparameter_search_results/ae_p10_es30_clf_p5_es15_bs256/128channels/: averaged_metrics_across_seeds.json  averaged_metrics_reverse_order_10seeds.json  calculate_average_metrics_of_reverse_order 2.py
hyperparameter_search_results/ae_p10_es30_clf_p5_es15_bs256/33_32_32_16_16_8_8_16_16_32/: averaged_metrics_across_seeds.json
pths/: classifier_after_1st_autoencoder_robust_normalized_chip_1.pth  classifier_after_1st_autoencoder_robust_normalized_chip_2.pth
utils/: activations2.py  apply_normalization.py  autoencoder_utils.py  config.py  data_utils.py  models.py  normalization_techniques.py  path_utils.py  plot_utils.py  train_test_utils.py
(+2097 files in other folders)
