[project]
name = "enviromental-pollution-detection-using-deep-learning-new-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "Stelios Papargyris",email = "papargirisstelios3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.0,<3.0)",
    "numpy (>=1.24,<2.0)",
    "matplotlib (>=3.5,<4.0)",
    "scikit-learn (>=1.3,<2.0)",
    "scipy (>=1.10,<1.12)",
    "pillow (>=10.0,<11.0)",
    "torch (>=2.0,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
